includes ucsc datasets

--- a/r_modules/dataPackages/NetworkMaker/NAMESPACE
+++ b/r_modules/dataPackages/NetworkMaker/NAMESPACE
@@ -6,6 +6,7 @@ exportMethods(
   getSimilarityMatrix,
   buildChromosomalTable,
   getChromosomalInfo,
+  get.filtered.sampleIDs,
   getSamplesGraph,
   getChromosomeGraph,
   getMutationGraph,
