--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,5 @@ Thumbs.db
 .setupR*
 Rlibs
 .Rhistory
-<<<<<<< HEAD
 .Rapp.history
-=======
-.Rapp.History
->>>>>>> TCGAPipelineRefactoring
+g.json
