--- a/.gitattributes
+++ b/.gitattributes
@@ -16,4 +16,4 @@
 *.gif   binary
 *.jpg   binary
 
-g.json filter=lfs diff=lfs merge=lfs -text
+r_modules/dataPackages/TCGAbrca/inst/import/g.json filter=lfs diff=lfs merge=lfs -text
