--- a/r_modules/dataPackages/NetworkMaker/NAMESPACE
+++ b/r_modules/dataPackages/NetworkMaker/NAMESPACE
@@ -11,7 +11,8 @@ exportMethods(
   getMutationGraph,
   getCopyNumberGraph,
   getSimilarityScreenCoordinates,
-  getChromosomeScreenCoordinates
+  getChromosomeScreenCoordinates,
+  get.filtered.sampleIDs
   )
 
 export(
