--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ client/.sass-cache/
 client/.idea/
 client/.tmp/
 dataPackages/data
+dataPackages/archive/UCSC
+dataPackages/archive/cBio
 
 # Logs and databases #
 ######################
