--- a/dataPackages/manifests/os.mds.manifest.json
+++ b/dataPackages/manifests/os.mds.manifest.json
@@ -5,18 +5,16 @@
     "collections": [
       {
         "id": 1,
-        "date": "2016-07-03",
+        "date": "2016-07-05",
         "directory": "../data/molecular/mds/",
         "file": "brca_mds_1_mds-oncoVogel274-cnv-mut01",
-        "process": [
-          {
-            "calculation": "mds",
-            "geneset": "oncoVogel274",
-            "input": ["cnv", "mut01"],
-            "regex": ".01$",
-            "threshold": -0.0001
-          }
-        ],
+        "process": {
+          "calculation": "mds",
+          "geneset": "oncoVogel274",
+          "input": ["cnv", "mut01"],
+          "regex": ".01$",
+          "threshold": -0.0001
+        },
         "parent": [
           ["brca", "cnv", "1"],
           ["brca", "mut01", "1"]
@@ -30,21 +28,17 @@
     "collections": [
       {
         "id": 1,
-        "date": "2016-07-03",
+        "date": "2016-07-05",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_1_prcomp-oncoVogel274-cnv",
-        "process": [
-          {
-            "calculation": "prcomp",
-            "geneset": "oncoVogel274",
-            "input": "cnv",
-            "center": "TRUE",
-            "scale": "TRUE"
-          }
-        ],
-        "parent": [
-          ["brca", "cnv", "1"]
-        ]
+        "process": {
+          "calculation": "prcomp",
+          "geneset": "oncoVogel274",
+          "input": "cnv",
+          "center": "TRUE",
+          "scale": "TRUE"
+        },
+        "parent": ["brca", "cnv", "1"]
       }
     ]
   },
@@ -54,21 +48,17 @@
     "collections": [
       {
         "id": 1,
-        "date": "2016-07-03",
+        "date": "2016-07-05",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_1_prcomp-oncoVogel274-cnv",
-        "process": [
-          {
-            "calculation": "prcomp",
-            "geneset": "oncoVogel274",
-            "input": "cnv",
-            "center": "TRUE",
-            "scale": "TRUE"
-          }
-        ],
-        "parent": [
-          ["brca", "cnv", "1"]
-        ]
+        "process": {
+          "calculation": "prcomp",
+          "geneset": "oncoVogel274",
+          "input": "cnv",
+          "center": "TRUE",
+          "scale": "TRUE"
+        },
+        "parent": ["brca", "cnv", "1"]
       }
     ]
   }
