--- a/dataPackages/manifests/os.mds.scaled.manifest.json
+++ b/dataPackages/manifests/os.mds.scaled.manifest.json
@@ -5,7 +5,7 @@
     "collections": [
       {
         "id": 1,
-        "date": "2016-07-03",
+        "date": "2016-07-13",
         "directory": "../data/molecular/mds/",
         "file": "brca_mds_1_mds-oncoVogel274-cnv-mut01",
         "process": [
@@ -24,19 +24,116 @@
       },
       {
         "id": 2,
-        "date": "2016-07-03",
-        "directory": "../data/molecular/mds/scaled/",
-        "file": "brca_mds_2_scaled-10000-oncoVogel274",
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_mds_2_mds-oncoVogel274-cnv-mut01",
         "process": [
           {
-            "calculation": "scaled",
-            "scaleFactor": 10000,
-            "geneset": "oncoVogel274"
+            "calculation": "mds",
+            "geneset": "oncoVogel274",
+            "input": ["cnv", "mut01"],
+            "regex": ".01$",
+            "threshold": -0.0001
           }
         ],
         "parent": [
-          ["brca", "mds", "1"]
+          ["brca", "cnv", "1"],
+          ["brca", "mut01", "2"]
         ]
+      },
+      {
+        "id": 3,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_mds_3_mds-oncoVogel274-cnv-mut01",
+        "process": [
+          {
+            "calculation": "mds",
+            "geneset": "oncoVogel274",
+            "input": ["cnv", "mut01"],
+            "regex": ".01$",
+            "threshold": -0.0001
+          }
+        ],
+        "parent": [
+          ["brca", "cnv", "2"],
+          ["brca", "mut01", "1"]
+        ]
+      },
+      {
+        "id": 4,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_mds_4_mds-oncoVogel274-cnv-mut01",
+        "process": [
+          {
+            "calculation": "mds",
+            "geneset": "oncoVogel274",
+            "input": ["cnv", "mut01"],
+            "regex": ".01$",
+            "threshold": -0.0001
+          }
+        ],
+        "parent": [
+          ["brca", "cnv", "2"],
+          ["brca", "mut01", "2"]
+        ]
+      },
+      {
+        "id": 5,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/scaled/",
+        "file": "brca_mds_5_scaled-1e+05-oncoVogel274",
+        "process": [
+          {
+            "calculation": "scaled",
+            "scaleFactor": 100000,
+            "geneset": "oncoVogel274"
+          }
+        ],
+        "parent": ["brca", "mds", "1"]
+      },
+      {
+        "id": 6,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/scaled/",
+        "file": "brca_mds_6_scaled-1e+05-oncoVogel274",
+        "process": [
+          {
+            "calculation": "scaled",
+            "scaleFactor": 100000,
+            "geneset": "oncoVogel274"
+          }
+        ],
+        "parent": ["brca", "mds", "2"]
+      },
+      {
+        "id": 7,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/scaled/",
+        "file": "brca_mds_7_scaled-1e+05-oncoVogel274",
+        "process": [
+          {
+            "calculation": "scaled",
+            "scaleFactor": 100000,
+            "geneset": "oncoVogel274"
+          }
+        ],
+        "parent": ["brca", "mds", "3"]
+      },
+      {
+        "id": 8,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/scaled/",
+        "file": "brca_mds_8_scaled-1e+05-oncoVogel274",
+        "process": [
+          {
+            "calculation": "scaled",
+            "scaleFactor": 100000,
+            "geneset": "oncoVogel274"
+          }
+        ],
+        "parent": ["brca", "mds", "4"]
       }
     ]
   },
@@ -46,7 +143,7 @@
     "collections": [
       {
         "id": 1,
-        "date": "2016-07-03",
+        "date": "2016-07-13",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaScores_1_prcomp-oncoVogel274-cnv",
         "process": [
@@ -58,9 +155,148 @@
             "scale": "TRUE"
           }
         ],
-        "parent": [
-          ["brca", "cnv", "1"]
-        ]
+        "parent": ["brca", "cnv", "1"]
+      },
+      {
+        "id": 2,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaScores_2_prcomp-oncoVogel274-cnv",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "cnv",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "cnv", "2"]
+      },
+      {
+        "id": 3,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaScores_3_prcomp-oncoVogel274-mut01",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "mut01",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "mut01", "1"]
+      },
+      {
+        "id": 4,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaScores_4_prcomp-oncoVogel274-mut01",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "mut01",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "mut01", "2"]
+      },
+      {
+        "id": 5,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaScores_5_prcomp-oncoVogel274-rna",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "rna",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "rna", "1"]
+      },
+      {
+        "id": 6,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaScores_6_prcomp-oncoVogel274-rna",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "rna",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "rna", "2"]
+      },
+      {
+        "id": 7,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaScores_7_prcomp-NA-rna",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "input": "rna",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "rna", "1"]
+      },
+      {
+        "id": 8,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaScores_8_prcomp-NA-rna",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "input": "rna",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "rna", "2"]
+      },
+      {
+        "id": 9,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaScores_9_prcomp-oncoVogel274-protein",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "protein",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "protein", "1"]
+      },
+      {
+        "id": 10,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaScores_10_prcomp-NA-protein",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "input": "protein",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "protein", "1"]
       }
     ]
   },
@@ -70,7 +306,7 @@
     "collections": [
       {
         "id": 1,
-        "date": "2016-07-03",
+        "date": "2016-07-13",
         "directory": "../data/molecular/mds/",
         "file": "brca_pcaLoadings_1_prcomp-oncoVogel274-cnv",
         "process": [
@@ -82,9 +318,148 @@
             "scale": "TRUE"
           }
         ],
-        "parent": [
-          ["brca", "cnv", "1"]
-        ]
+        "parent": ["brca", "cnv", "1"]
+      },
+      {
+        "id": 2,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaLoadings_2_prcomp-oncoVogel274-cnv",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "cnv",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "cnv", "2"]
+      },
+      {
+        "id": 3,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaLoadings_3_prcomp-oncoVogel274-mut01",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "mut01",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "mut01", "1"]
+      },
+      {
+        "id": 4,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaLoadings_4_prcomp-oncoVogel274-mut01",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "mut01",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "mut01", "2"]
+      },
+      {
+        "id": 5,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaLoadings_5_prcomp-oncoVogel274-rna",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "rna",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "rna", "1"]
+      },
+      {
+        "id": 6,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaLoadings_6_prcomp-oncoVogel274-rna",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "rna",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "rna", "2"]
+      },
+      {
+        "id": 7,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaLoadings_7_prcomp-NA-rna",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "input": "rna",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "rna", "1"]
+      },
+      {
+        "id": 8,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaLoadings_8_prcomp-NA-rna",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "input": "rna",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "rna", "2"]
+      },
+      {
+        "id": 9,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaLoadings_9_prcomp-oncoVogel274-protein",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "geneset": "oncoVogel274",
+            "input": "protein",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "protein", "1"]
+      },
+      {
+        "id": 10,
+        "date": "2016-07-13",
+        "directory": "../data/molecular/mds/",
+        "file": "brca_pcaLoadings_10_prcomp-NA-protein",
+        "process": [
+          {
+            "calculation": "prcomp",
+            "input": "protein",
+            "center": "TRUE",
+            "scale": "TRUE"
+          }
+        ],
+        "parent": ["brca", "protein", "1"]
       }
     ]
   }
